fix media manager container not showing last button: add padding to bottom

--- a/src/cms/css/_inline-media-editor.scss
+++ b/src/cms/css/_inline-media-editor.scss
@@ -76,6 +76,7 @@ input[type="file"] {
   width: 100%;
   margin: 0 auto;
   padding: 12px;
+  padding-bottom: 50px;
   bottom: 0;
 }
 
